// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages / Browse / components / SearchField Check search field should render with initial search query 1`] = `
<SearchField
  fetchSuggestions={[MockFunction]}
  name="search"
  openScanner={[MockFunction]}
  pageId="1234"
  query="foo"
  showScannerIcon={false}
  submitSearch={[MockFunction]}
>
  <div
    className="theme__browse__search-field"
    data-test-id="SearchField"
  >
    <div
      className="sg-15v3opi-container"
    >
      <div
        className="sg-19czy0f-inputWrapper"
      >
        <form
          action="."
          onSubmit={[Function]}
        >
          <label
            className="sg-9d4lwt-label"
            htmlFor="search"
          >
            <div
              className="sg-dfe17v-icon"
            >
              <MagnifierIcon />
            </div>
          </label>
          <_default
            autoComplete={false}
            className="sg-1oqqane-input"
            onChange={[Function]}
            onFocusChange={[Function]}
            onSubmit={[Function]}
            setRef={[Function]}
            type="search"
            value="foo"
          >
            <SimpleInput
              attributes={null}
              autoComplete={false}
              autoCorrect={false}
              className="sg-1oqqane-input"
              disabled={false}
              id={null}
              inputComponent="input"
              isControlled={false}
              maxLength=""
              name={null}
              onChange={[Function]}
              onFocusChange={[Function]}
              onKeyPress={[Function]}
              onSanitize={[Function]}
              onSubmit={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              type="search"
              validateOnBlur={true}
              value="foo"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                className="sg-1oqqane-input simpleInput common__simple-input"
                disabled={false}
                id={null}
                inputMode={null}
                maxLength=""
                min={null}
                name={null}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={null}
                onKeyPress={[Function]}
                pattern={null}
                required={false}
                step={null}
                type="search"
                value="foo"
              />
            </SimpleInput>
          </_default>
        </form>
      </div>
      <div>
        <button
          aria-hidden={true}
          className="sg-16w71l0-button-hidden"
          data-test-id="search-field-cancel"
          onClick={[Function]}
          type="button"
        >
          <Text
            string="search.cancel"
          >
            I18n.Text
          </Text>
        </button>
      </div>
    </div>
    <Component
      bottomHeight={0}
      onClick={[Function]}
      searchPhrase="foo"
      visible={false}
    />
  </div>
</SearchField>
`;

exports[`pages / Browse / components / SearchField Check search field should show suggestions when focused 1`] = `
<SearchField
  fetchSuggestions={[MockFunction]}
  name="search"
  openScanner={[MockFunction]}
  pageId="1234"
  query="foo"
  showScannerIcon={false}
  submitSearch={[MockFunction]}
>
  <div
    className="theme__browse__search-field"
    data-test-id="SearchField"
  >
    <div
      className="sg-15v3opi-container"
    >
      <div
        className="sg-19czy0f-inputWrapper"
      >
        <form
          action="."
          onSubmit={[Function]}
        >
          <label
            className="sg-9d4lwt-label"
            htmlFor="search"
          >
            <div
              className="sg-dfe17v-icon"
            >
              <MagnifierIcon />
            </div>
          </label>
          <_default
            autoComplete={false}
            className="sg-1oqqane-input"
            onChange={[Function]}
            onFocusChange={[Function]}
            onSubmit={[Function]}
            setRef={[Function]}
            type="search"
            value="foo"
          >
            <SimpleInput
              attributes={null}
              autoComplete={false}
              autoCorrect={false}
              className="sg-1oqqane-input"
              disabled={false}
              id={null}
              inputComponent="input"
              isControlled={false}
              maxLength=""
              name={null}
              onChange={[Function]}
              onFocusChange={[Function]}
              onKeyPress={[Function]}
              onSanitize={[Function]}
              onSubmit={[Function]}
              onValidate={[Function]}
              password={false}
              required={false}
              setRef={[Function]}
              type="search"
              validateOnBlur={true}
              value="foo"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                className="sg-1oqqane-input simpleInput common__simple-input"
                disabled={false}
                id={null}
                inputMode={null}
                maxLength=""
                min={null}
                name={null}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={null}
                onKeyPress={[Function]}
                pattern={null}
                required={false}
                step={null}
                type="search"
                value="foo"
              />
            </SimpleInput>
          </_default>
        </form>
      </div>
      <div>
        <button
          aria-hidden={false}
          className="sg-1a9h8im-button"
          data-test-id="search-field-cancel"
          onClick={[Function]}
          type="button"
        >
          <Text
            string="search.cancel"
          >
            I18n.Text
          </Text>
        </button>
      </div>
    </div>
    <div
      className="sg-1lsj22t-overlay"
    />
    <Component
      bottomHeight={0}
      onClick={[Function]}
      searchPhrase="foo"
      visible={true}
    />
  </div>
</SearchField>
`;
